# QtCmakeTest

./: .gitignore  CMakeLists.txt  README.md
Sources/: AudioPluginManager.cpp  AudioPluginManager.h  PluginManager.cpp  PluginManager.h  mainwindow.cpp  mainwindow.h
